--- a/_layouts/eggster.html
+++ b/_layouts/eggster.html
@@ -3,7 +3,7 @@
 <head>
     <title>{{ page.title }} &bull; Eggster</title>
     <meta charset="utf-8">
-    <link href="assets/css/eggster.css" rel="stylesheet">
+    <link href="/assets/css/eggster.css" rel="stylesheet">
 </head>
 <body>
     <center>
