--- a/_layouts/eggster.html
+++ b/_layouts/eggster.html
@@ -3,6 +3,8 @@
 <head>
 	<title>{{ page.title }} &bull; Eggster</title>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<link href="/assets/css/eggster.css" rel="stylesheet">
 </head>
 <body>
