--- a/_layouts/eggster.html
+++ b/_layouts/eggster.html
@@ -4,7 +4,10 @@
 	<title>{{ page.title }} &bull; Eggster</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
+	<meta property="og:site_name" content="Eggster">
+	<meta property="og:title" content="{{ page.title }}">
+	<meta property="og:image" content="/assets/img/hotdog.png">
+	<link rel="icon" type="image/png" href="/assets/img/hotdog.png">
 	<link href="/assets/css/eggster.css" rel="stylesheet">
 </head>
 <body>
