--- a/assets/css/eggster.scss
+++ b/assets/css/eggster.scss
@@ -1,5 +1,6 @@
 ---
 ---
+
 @keyframes cani {
 	0%, 100% {
 		color: #ffed93;
@@ -86,4 +87,19 @@ h1, h2, h3, h4, h5, h6, p {
 			vertical-align: initial;
 		}
 	}
+}
+
+.application {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	border: 0;
+}
+
+.application-container {
+	position: relative;
+	overflow: hidden;
+	padding-top: 56.25%;
 }
