--- a/assets/css/eggster.scss
+++ b/assets/css/eggster.scss
@@ -15,6 +15,48 @@
 
 	}
 }
+
+.navbar {
+	background-color: rgba(40, 40, 40, 0.7);
+	margin: 0;
+	padding: 0;
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	z-index: 999;
+	ul {
+		list-style-type: none;
+		overflow: hidden;
+		padding: 0;
+		margin: 0;
+
+		li {
+			float: left;
+
+			a {
+				padding: 16px;
+				text-align: center;
+				display: block;
+				color: #ffa500;
+				text-decoration: none;
+
+				&.active {
+					background-color: rgba(60, 60, 60, 0.7);
+				}
+
+				&:hover {
+					background-color: rgba(0, 0, 0, 0.3);
+				}
+			}
+		}
+	}
+}
+
+.page {
+	margin-top: 50px;
+}
+
 body {
 	font-family: sans-serif;
 	background: url("../img/bg.jpg") no-repeat center center fixed;
