--- a/assets/css/eggster.scss
+++ b/assets/css/eggster.scss
@@ -3,14 +3,14 @@
 
 @keyframes cani {
 	0%, 100% {
-		color: #ffed93;
+		color: #000000;
 		text-shadow: 2px 2px #f8f8f8;
 		transform: skewX(20deg);
 		transform: rotate(10deg);
 	}
 	50% {
 		color: #f8f8f8;
-		text-shadow: 2px 2px #ffed93;
+		text-shadow: 2px 2px #000000;
 		transform: skewX(-20deg);
 		transform: rotate(-10deg);
 
