--- a/_layouts/eggster.html
+++ b/_layouts/eggster.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta property="og:site_name" content="Eggster">
 	<meta property="og:title" content="{{ page.title }}">
-	<meta property="og:image" content="/assets/img/hotdog.png">
-	<link rel="icon" type="image/png" href="/assets/img/hotdog.png">
+	<meta property="og:image" content="/assets/img/PNGCOG.png">
+	<link rel="icon" type="image/png" href="/assets/img/PNGCOG.png">
 	<link href="/assets/css/eggster.css" rel="stylesheet">
 </head>
 <body>
