--- a/assets/css/eggster.scss
+++ b/assets/css/eggster.scss
@@ -68,7 +68,7 @@ body {
 	background-color: rgba(0, 0, 0, 0.3);
 	margin: 15px;
 	padding: 3px;
-	border: 2px solid purple;
+	border: 2px solid white;
 
 	p {
 		color: #f8f8f8;
