--- a/assets/css/eggster.scss
+++ b/assets/css/eggster.scss
@@ -111,7 +111,7 @@ h1, h2, h3, h4, h5, h6, p {
 	.container {
 		overflow: auto;
 		margin: 2px;
-		border: 1px solid purple;
+		border: 1px solid white;
 
 		p {
 			color: #f8f8f8;
