--- a/assets/css/eggster.scss
+++ b/assets/css/eggster.scss
@@ -60,7 +60,7 @@
 
 body {
 	font-family: sans-serif;
-	background: url("../img/eggsterbg.png") no-repeat center center fixed;
+	background: url("../img/epicbg.png") no-repeat center center fixed;
 	background-size: cover;
 }
 
